# equi-act

./: .gitignore  .~lock.wandb_agg_by_config.csv#  CLAUDE.md  MNIST_POINTCLOUD_SETUP.md  POINTCLOUD_QUICKREF.md  README.md  Results.csv  TRAIN_POINTCLOUD_GUIDE.md  env.yml  environment.yml  mnist_final_values.csv  pyproject.toml  requirements.txt  run_sweep.sh  test_batch_handling.py  test_edge_index_fix.py  test_train_pointcloud.py  verify_pointcloud_setup.py  wandb_agg_by_config.csv  wandb_methods_summary.csv
HNet/: HNet.py  config_resisc.yaml  multi_run.py  sweep_gated_colorectal.yaml  sweep_gated_mnist.yaml  sweep_gated_resisc.yaml  sweep_normlin_mnist.yaml  train.py
HW1/: hw1.py  visualize_mnist.py
HW2/: HNet.py  mnist_rot.py  sweep.yaml  sweep_gated.yaml  sweep_normlin.yaml  tests.ipynb  train.py
SO2_Nets/: HNet.py  train.py
development/: filter_visualization.py
examples/: train_mnist_pointcloud.py
homeworks/: dataset_download.py  hw1.py  mnist_rot.py  visualize_mnist.py
plots/: README_compare_histograms.md  README_extract_norms.md  README_plot_histograms.md  activation_equivariance_check.py  compare_histograms.py  extract_feature_norm_distributions.py  plot_activation_equivariance_npz.py  plot_activation_responses.py  plot_kde_by_frequency.py  plot_saved_histograms.py
src/: equivariance_metric.py  inspect_dataset_splits.py  invariance_test.py  measure_inference_time.py  plot_dataset_examples.py  plot_equivariance_curves.py  run_sweep.sh  test_activation_equivariance.py  train.py
tables/: README_statistical_test.md  combine_invariance_and_results.py  (+18 more)
(+168 files in other folders)
